content/vault/v1.16.x/content/api-docs/secret/databases/snowflake.mdx
---
layout: api
page_title: Snowflake - Database - Secrets Engines - HTTP API
description: >-
  The Snowflake plugin for Vault's database secrets engine generates database
  credentials to access Snowflake servers.
---

# Snowflake database plugin HTTP API

<Warning title="Password authentication removal">

  [Snowflake is disabling password authentication for all users](https://www.snowflake.com/en/blog/blocking-single-factor-password-authentification) in
  November of 2025. HashiCorp has added support for key pair authentication in
  place of passwords.

  Vault currently does not support rotate root for key pairs. To manually rotate
  key pairs, users can:

  - update the root configuration in Vault with the new private key
  - update the public key associated with the user in Snowflake

  For more information on rotating key pairs, please refer to the official
  [Snowflake documentation](https://docs.snowflake.com/en/user-guide/key-pair-auth#configuring-key-pair-rotation).

</Warning>

The Snowflake database plugin is one of the supported plugins for the database
secrets engine. This plugin generates database credentials dynamically based on
configured roles for the Snowflake database.

## Configure connection

In addition to the parameters defined by the [Database
Backend](/vault/api-docs/secret/databases#configure-connection), this plugin
has a number of parameters to further configure a connection.

| Method | Path                     |
| :----- | :----------------------- |
| `POST` | `/database/config/:name` |

### Parameters

- `connection_url` `(string: <required>)` - Specifies the Snowflake DSN. This field
  can be templated and supports passing the username and password
  parameters in the format `{{field_name}}` when you use password authentication.
  If you use root credential rotation for passwords, you must provide a templated
  connection URL. Refer to the
  [Snowflake secrets engine docs](/vault/docs/secrets/databases/snowflake#setup)
  for more information on the connection URL format requirements for different
  authentication methods.

- `max_open_connections` `(int: 4)` - Specifies the maximum number of open
  connections to the database.

- `max_idle_connections` `(int: 0)` - Specifies the maximum number of idle
  connections to the database. A zero uses the value of `max_open_connections`
  and a negative value disables idle connections. If larger than
  `max_open_connections` it will be reduced to be equal.

- `max_connection_lifetime` `(string: "0s")` - Specifies the maximum amount of
  time clients can reuse a connection. Set the lifetime to `0s` to make a
  connection reusable forever. Snowflake uses a default session policy of 4 hours unless you [change the session policy definition](https://docs.snowflake.com/en/user-guide/session-policies#session-policies).

- `username` `(string: "")` - The root credential username used in the connection URL.

- `password` `(string: "")` - The root credential password used in the connection URL.

- `username_template` `(string)` - [Template](/vault/docs/concepts/username-templating) describing how dynamic usernames are generated.

- `disable_escaping` `(boolean: false)` - Turns off the escaping of special characters inside of the username
  and password fields. See the [databases secrets engine docs](/vault/docs/secrets/databases#disable-character-escaping)
  for more information. Defaults to `false`.

### Sample payload

```json
{
  "plugin_name": "snowflake-database-plugin",
  "allowed_roles": "readonly",
  "connection_url": "{{username}}:{{password}}@ecxxxx.west-us-1.azure/db_name",
  "max_open_connections": 5,
  "max_connection_lifetime": "5s",
  "username": "username",
  "password": "password"
}
```

### Sample request

```shell-session
$ curl \
    --header "X-Vault-Token: ..." \
    --request POST \
    --data @payload.json \
    http://127.0.0.1:8200/v1/database/config/snowflake
```

## Statements

Statements are configured during role creation and are used by the plugin to
determine what is sent to the database on user creation, renewing, and
revocation. For more information on configuring roles see the [Role
API](/vault/api-docs/secret/databases#create-role) in the database secrets engine docs.

### Parameters

The following are the statements used by this plugin. If not mentioned in this
list the plugin does not support that statement type.

- `creation_statements` `(list: <required>)` – Specifies the database
  statements executed to create and configure a user. Must be a
  semicolon-separated string, a base64-encoded semicolon-separated string, a
  serialized JSON string array, or a base64-encoded serialized JSON string
  array. The `{{name}}` and `{{expiration}}` values will be substituted.

  The following values will be substituted depending on the
  [credential_type](/vault/api-docs/secret/databases#credential_type) of the role:

  - `{{password}}` is substituted for the `password` credential type
  - `{{public_key}}` is substituted for the `rsa_private_key` credential type

- `revocation_statements` `(list: [])` – Specifies the database statements to
  be executed to revoke a user. Must be a semicolon-separated string, a
  base64-encoded semicolon-separated string, a serialized JSON string array, or
  a base64-encoded serialized JSON string array. The `{{name}}` value will be
  substituted. If not provided defaults to a generic drop user statement.

- `rollback_statements` `(list: [])` – Specifies the database statements to be
  executed rollback a create operation in the event of an error. Not every
  plugin type will support this functionality. Must be a semicolon-separated
  string, a base64-encoded semicolon-separated string, a serialized JSON string
  array, or a base64-encoded serialized JSON string array. The `{{name}}` value
  will be substituted.

- `renew_statements` `(list: [])` – Specifies the database statements to be
  executed to renew a user. Not every plugin type will support this
  functionality. Must be a semicolon-separated string, a base64-encoded
  semicolon-separated string, a serialized JSON string array, or a
  base64-encoded serialized JSON string array. The `{{name}}` and
  `{{expiration}}` values will be substituted.

- `rotation_statements` `(list: [])` – Specifies the database statements to be
  executed to rotate the password for a given username. Must be a
  semicolon-separated string, a base64-encoded semicolon-separated string, a
  serialized JSON string array, or a base64-encoded serialized JSON string
  array. The `{{name}}` value will be substituted.

  The following values will be substituted depending on the
  [credential_type](/vault/api-docs/secret/databases#credential_type) of the role:

  - `{{password}}` is substituted for the `password` credential type
  - `{{public_key}}` is substituted for the `rsa_private_key` credential type
